Bug 76415 - SIGSEGV in Weston during close animation
Summary: SIGSEGV in Weston during close animation
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-20 20:54 UTC by U. Artie Eoff
Modified: 2014-03-20 21:54 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gdb backtrace (8.83 KB, text/plain)
2014-03-20 20:54 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2014-03-20 20:54:45 UTC
Created attachment 96124 [details]
gdb backtrace

Since commits 160fe75b32 and 3a869019eb, which added a close fade animation, the wayland-fits core/wrapper/ShellSurface test triggers Weston to segfault.  This is a regression.  See attached backtrace for more details.


wayland (master) heads/master-0-g3adcf6f
drm (master) heads/master-0-g1cb5fc7
mesa (master) heads/master-0-g7125473
libva (master) heads/master-0-gffdcb50
intel-driver (master) heads/master-0-gf393de5
cairo (master) heads/master-0-gbc05dbc
libinput (master) heads/master-0-ge1d25a9
weston (master) heads/master-0-g160fe75
wfits (master) heads/master-0-g2a48b9b

See https://github.com/01org/wayland-fits/blob/master/src/test/core/shell_surface.cpp for the test case sourcecode.
Comment 1 Kristian Høgsberg 2014-03-20 21:49:38 UTC
commit b033c5e1d094874da73c11a89ffd32d09936171e
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Thu Mar 20 14:49:07 2014 -0700

    shell: Only animate window closing for mapped windows
    
    https://bugs.freedesktop.org/show_bug.cgi?id=76415


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.