shell: Only animate window closing for mapped windows

https://bugs.freedesktop.org/show_bug.cgi?id=76415